# FFmpegBox

./: CMakeLists.txt  CMakeUserPresets.json  README.md
res/: main.qml
src/: CMakeLists.txt  containerbox.cpp  containerbox.h  containerboxpaint.cpp  containerboxpaint.h  ffmpeg-filter.cpp  ffmpeg-filter.h  ffmpegfilter.cpp  ffmpegfilter.h  ffmpegformat.cpp  ffmpegformat.h  filter-list-view.cpp  filter-list-view.h  filtercompareview.cpp  filtercompareview.h  filtergraphitem.cpp  filtergraphitem.h  filtergraphview.cpp  filtergraphview.h  filterlistview.cpp  filterlistview.h  launchwindow.cpp  launchwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  paintbox.cpp  paintbox.h  tablebox.cpp  tablebox.h  toolbar.cpp  toolbar.h  treebox.cpp  treebox.h
src/cplusplus/: container.hpp
